src/objects/Mana_Technician_Repeatable_Data__c.object
<CustomObject>
    <fields>
        <fullName>Fecha_recepcion_de_insumos__c</fullName>
        <label>Fecha recepción de insumos</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_y_hora_de_inicio_del_taller__c</fullName>
        <label>Fecha y hora de inicio del taller</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Technician__c</fullName>
        <label>Technician</label>
        <referenceTo>Mana_Technician__c</referenceTo>
        <relationshipLabel>Mana Technician Repeatable Data</relationshipLabel>
        <relationshipName>Mana_Technician_Repeatable_Data</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Tipo_de_Recepcion_de_Insumos__c</fullName>
        <label>Tipo de Recepción de Insumos</label>
        <picklist>
            <picklistValues>
                <fullName>Primera</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Segunda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tercera</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Única</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Mana Technician Repeatable Data</label>
    <nameField>
        <displayFormat>A-{00000000}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mana Technician Repeatable Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>